--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "robofroends",
+  "name": "robofriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.28.0",
+    "eslint-webpack-plugin": "^3.2.0"
   }
 }
